Refactor: Migration of DTOs to Java Records and integration of MapStruct